Minor optimizations for endPage function.